fix for iframe on safari

--- a/css/post.css
+++ b/css/post.css
@@ -85,7 +85,6 @@ html {
 }
 
 #postFrame {
-    object-fit: cover;
     width: 80vw;
     margin: 1vh;
     margin-left: 10vw;
